@@ -1,7 +1,10 @@
+[B]3.0.10~nightly12[/B]
+- Fix View Typ (Ansichten werden nun auch auf den Folgeseiten korrekt angezeigt)
+
 [B]3.0.10~nightly11[/B]
 - Fix Trakt Bugfix (Benutzerauthorisierung wird nicht angezeigt)
-	Der Trakt Benutzer wird nun korrekt angezeigt.
-	ACHTUNG: ES IST ZWINGEND NOTWENDIG DASS JEDER BENUTZER TRAKT NEU AUTORISIERT! WIRD DIES NICHT GEMACHT WERDEN EINIGE 		TRAKT-OPTIONEN FEHLERHAFT SEIN!
+    Der Trakt Benutzer wird nun korrekt angezeigt.
+    ACHTUNG: ES IST ZWINGEND NOTWENDIG DASS JEDER BENUTZER TRAKT NEU AUTORISIERT! WIRD DIES NICHT GEMACHT WERDEN EINIGE 		TRAKT-OPTIONEN FEHLERHAFT SEIN!
 
 [B]3.0.10~nightly10[/B]
  - New Indexpage: Movie-stream.eu
